Fix 🐛 in multiply, update README, make a bit better on mobile 😌

--- a/style.css
+++ b/style.css
@@ -47,17 +47,12 @@ body {
   text-transform: uppercase;
   color: white;
   background-color: rgb(63, 94, 251);
-  background-color: radial-gradient(
-    circle,
-    rgba(63, 94, 251, 1) 0%,
-    rgba(252, 70, 107, 1) 62%
-  );
 }
 
 .row {
   border: 1px #fff solid;
   border-radius: 5px;
-  justify-content: space-between;
+  justify-content: space-evenly;
   display: flex;
   flex: 1;
   height: 15%;
@@ -120,12 +115,26 @@ button:active {
   width: 100%;
 }
 
-/*Cute lil mediaquery for responsiveness on mobile*/
+/*Cute lil mediaquery for colors && responsiveness on mobile*/
 @media (max-width: 1000px) {
+  .main {
+    height: 500px;
+    width: 300px;
+  }
   body {
     background-color: #ffc0cb;
   }
-  button:hover {
-    background-color: #e0e1e1;
+  .title {
+  font-size: 30px;
+  box-shadow: 25px 15px #7effcf;
+  }
+  .math {
+    background-color: #7effcf;
+  }
+  .math:hover {
+    background-color: #acffe0;
+  }
+  .math:active {
+    background-color: #5cba97;
   }
 }
